--- a/backend/showpage-api/config/database.yml
+++ b/backend/showpage-api/config/database.yml
@@ -16,6 +16,7 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+
 test:
   <<: *default
   database: db/test.sqlite3
@@ -23,3 +24,18 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+# development:
+#   adapter: sqlite3
+#   database: database.db
+
+# test:
+#   adapter: sqlite3
+#   database: database.db
+
+# production:
+#   adapter: postgresql
+#   database: mission
+#   username: username
+#   password: password
+#   host: localhost
